--- a/Index.html
+++ b/Index.html
@@ -4,62 +4,135 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../MyCV/style/style.css">
-    <link rel="stylesheet" href="../MyCV/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../MyCV/bootstrap/css/bootstrap-grid.css">
-    <link rel="stylesheet" href="../MyCV/bootstrap/js/bootstrap.js">
+    <link rel="stylesheet" href="../My-Latest_CV/style/style.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/css/mdb.min.css" rel="stylesheet">
     <title>Xhantilomzi CV</title>
 </head>
 <body>
-    <div class="container-fluid">
-    <ul class="nav nav-pills justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Education</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="#">Project</a>
-        </li>
-      </ul>
+   
+
+    <div class="bg"></div>
+
+    <h2 class="text-center">About</h2>
+    <p class="py-5 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Vel illum doloribus eveniet placeat perspiciatis? Quam nostrum ducimus sit quibusdam ab 
+      quia libero nemo nulla in dolorum,
+       voluptatum impedit, neque aperiam? </p>
+
+  <h2 class="text-center">Education</h2>  
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+     Quae iure nemo neque repellendus assumenda. Tenetur iste aperiam eius. 
+     Est quis eligendi modi,
+     voluptatibus maiores aut nobis quam assumenda vitae vel!</p>   
+
+         <h2 class="text-center">Projects</h2>
+<section>
+  <h2 class="h1-responsive font-weight-bold text-center my-5">Our best projects</h2>
+  <p class="grey-text text-center w-responsive mx-auto mb-5">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit est laborum.</p>
+
+  <div class="row mx-1">
+      <div class="col-md-12 mb-4">
+          <div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Others/img%20%2832%29.jpg);">
+              <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                  <div>
+                      <h6 class="purple-text"><i class="fas fa-plane"></i><strong> Travel</strong></h6>
+                      <h3 class="card-title py-3 font-weight-bold"><strong>This is the card title</strong></h3>
+                      <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
+                          optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
+                          Odit sed qui, dolorum!</p>
+                      <a class="btn btn-secondary btn-rounded"><i class="far fa-clone left"></i> View project</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <div class="col-md-6 mb-4">
+          <div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20%2873%29.jpg);">
+              <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                  <div>
+                      <h6 class="pink-text"><i class="fas fa-chart-pie"></i><strong> Marketing</strong></h6>
+                      <h3 class="card-title py-3 font-weight-bold"><strong>This is the card title</strong></h3>
+                      <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
+                          optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
+                          Odit sed qui, dolorum!</p>
+                      <a class="btn btn-pink btn-rounded"><i class="far fa-clone left"></i> View project</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <div class="col-md-6 mb-4">
+          <div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/City/6-col/img%20%2847%29.jpg);">
+              <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                  <div>
+                      <h6 class="green-text"><i class="far fa-eye"></i><strong> Entertainment</strong></h6>
+                      <h3 class="card-title py-3 font-weight-bold"><strong>This is the card title</strong></h3>
+                      <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
+                          optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
+                          Odit sed qui, dolorum!</p>
+                      <a class="btn btn-success btn-rounded"><i class="far fa-clone left"></i> View project</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+ 
+<div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);">
+
+  <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+      <div>
+          <h5 class="pink-text"><i class="fas fa-chart-pie"></i> Marketing</h5>
+          <h3 class="card-title pt-2"><strong>This is the card title</strong></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
+              optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
+              Odit sed qui, dolorum!.</p>
+          <a class="btn btn-pink"><i class="far fa-clone left"></i> View project</a>
+      </div>
+  </div>
+</div>
+
+<footer class="page-footer font-small cyan darken-3">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 py-5">
+        <div class="mb-5 flex-center">
+          <a class="fb-ic">
+            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <a class="tw-ic">
+            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <a class="gplus-ic">
+            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <a class="li-ic">
+            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <a class="ins-ic">
+            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+          </a>
+          <a class="pin-ic">
+            <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
+          </a>
+        </div>
+      </div>
     </div>
-
-<div class="card card-image"
-style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);">
-
-<div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-  <div>
-    <h5 class="pink-text"><i class="fas fa-chart-pie"></i> Marketing</h5>
-    <h3 class="card-title pt-2"><strong>This is the card title</strong></h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
-      optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
-      Odit sed qui, dolorum!.</p>
-    <a class="btn btn-pink"><i class="fas fa-clone left"></i> View project</a>
   </div>
-</div>
-
-</div>
-
-<div class="card card-image"
-style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);">
-
-<div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-  <div>
-    <h5 class="pink-text"><i class="fas fa-chart-pie"></i> Marketing</h5>
-    <h3 class="card-title pt-2"><strong>This is the card title</strong></h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
-      optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
-      Odit sed qui, dolorum!.</p>
-    <a class="btn btn-pink"><i class="fas fa-clone left"></i> View project</a>
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
   </div>
-</div>
+</footer>
 
-</div>
-
-
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/js/mdb.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
