--- a/Index.html
+++ b/Index.html
@@ -5,32 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../My-Latest_CV/style/style.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/css/mdb.min.css" rel="stylesheet">
     <title>Xhantilomzi CV</title>
 </head>
 <body>
-   
 
-    <div class="bg"></div>
-
+<div class="bg"></div>
+  <section>
     <h2 class="text-center">About</h2>
-    <p class="py-5 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Vel illum doloribus eveniet placeat perspiciatis? Quam nostrum ducimus sit quibusdam ab 
-      quia libero nemo nulla in dolorum,
-       voluptatum impedit, neque aperiam? </p>
+      <p class="py-5 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Vel illum doloribus eveniet placeat perspiciatis? Quam nostrum ducimus sit quibusdam ab 
+          quia libero nemo nulla in dolorum,
+            voluptatum impedit, neque aperiam? </p>
+            </section>
 
-  <h2 class="text-center">Education</h2>  
+      <!-- ****************************************
+           Education & Skills tag
+        *******************************************-->
+                                                                
+<section class="section">                        
+  <div class="tile is-parent">
+    <div class="tile is-child notification">
+      <div class="tile">
+        <div class="content has-text-centered">
+          <div class="container is-fluid">
+            <div class="tile is-parent is-vertical">
+              <article class="tile is-child notification ">
+                <div id="education">
+                  <div class="h2_text has-text-centered">
+                    <h2 class="title has-text-weight-bold" style="color:black">
+                      Education
+                        </h2></br>
+                      </div>
+                      <h3 class="subtitle is-medium">Salesians Life Choices</h3>
+                          <p class="ed">
+                          The Life Choices Academy is a full-time program which empowers youth from the Cape Flats with life,
+                          practical and professional development skills.<br>
+                           We did intensive study of the following web development languages:<br>
+                            HTML, CSS, SASS, jQuery, JavaScript, PHP, MySQL and Laravel.
+                            <br> As part of our professional development, we had the opportunity to use online resources such as MOOCs, were taught Design Thinking and made use of resources for personal reflection, such as DISC profiles and SMART goal setting.
+                          Subjects: Programming, professional development,
+                          <br> design thinking
+                          Programming languages: HTML and Bootstrap Framework, Bulma Framework, CSS (SASS and SCSS),
+                           PHP, Laravel, Javascript, MySQL</p><br>
+                                  <h3 class="subtitle is-medium">University of South Africa</h3>
+                                  <p>Computer Science for a year.</p><br>
+                                  <br>
+                          <h2 class="subtitle is-medium">High School:</h2>
+                          <h3 class="subtitle is-medium"> Wellington Secondary School. </h3>
+                      <ul class="subtitle is-medium">
+                  <li>English</li>
+                  <li>Afrikaans</li>
+                  <li>Mathematics</li>
+                  <li>Physical Science</li>
+                  <li>Life Science</li>
+                  <li>Geography</li>
+                  <li>Life Orientation</li>
+                      </ul>
+              </div>
+              </div>
+              </div>
+          </div>
+      </div>
   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
      Quae iure nemo neque repellendus assumenda. Tenetur iste aperiam eius. 
      Est quis eligendi modi,
      voluptatibus maiores aut nobis quam assumenda vitae vel!</p>   
 
-         <h2 class="text-center">Projects</h2>
 <section>
-  <h2 class="h1-responsive font-weight-bold text-center my-5">Our best projects</h2>
+  <h2 class="h1-responsive font-weight-bold text-center my-5">My projects</h2>
   <p class="grey-text text-center w-responsive mx-auto mb-5">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit est laborum.</p>
 
   <div class="row mx-1">
@@ -81,8 +127,8 @@
   </div>
 </section>
  
+<section>
 <div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);">
-
   <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
       <div>
           <h5 class="pink-text"><i class="fas fa-chart-pie"></i> Marketing</h5>
@@ -94,6 +140,19 @@
       </div>
   </div>
 </div>
+<div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);">
+  <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+      <div>
+          <h5 class="pink-text"><i class="fas fa-chart-pie"></i> Marketing</h5>
+          <h3 class="card-title pt-2"><strong>This is the card title</strong></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
+              optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
+              Odit sed qui, dolorum!.</p>
+          <a class="btn btn-pink"><i class="far fa-clone left"></i> View project</a>
+      </div>
+  </div>
+</div>
+</section>
 
 <footer class="page-footer font-small cyan darken-3">
   <div class="container">
@@ -103,27 +162,17 @@
           <a class="fb-ic">
             <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
           </a>
-          <a class="tw-ic">
-            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
           <a class="gplus-ic">
             <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
           </a>
           <a class="li-ic">
             <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
           </a>
-          <a class="ins-ic">
-            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <a class="pin-ic">
-            <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-          </a>
         </div>
       </div>
     </div>
   </div>
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+  <div class="footer-copyright text-center py-3">© 2020 Copyright by X
   </div>
 </footer>
 
