--- a/Index.html
+++ b/Index.html
@@ -12,14 +12,63 @@
     <title>Xhantilomzi CV</title>
 </head>
 <body>
+<header>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar bg-primary">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">Dropdown
+          </a>
+          <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+      </ul>
+      <form class="form-inline">
+        <div class="md-form my-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        </div>
+      </form>
+    </div>
+  </nav>
+</header>
+
 
 <div class="bg"></div>
   <section>
     <h2 class="text-center">About</h2>
-      <p class="py-5 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Vel illum doloribus eveniet placeat perspiciatis? Quam nostrum ducimus sit quibusdam ab 
-          quia libero nemo nulla in dolorum,
-            voluptatum impedit, neque aperiam? </p>
+      <p class="py-5 text-center">I am an enthusiastic and progressive person.
+         I am dedicated to keep growing as a person. Have a love and passion for education
+          and technology and people. I am an individual that strives for excellence through my
+           work ethic and drive. I have a strong inner motivation to assertively create and
+            implement new ideas. Strengths in web development and skill backed by training in
+             as a backend developer. I am Enthusiastic about web development eager to contribute to 
+             team success through hard work, attention to detail and excellent organizational skills.
+              Motivated to learn, grow and excel in the field of web and software development.
+               Software Development Intern with training and experience in programming. Knowledgeable
+                in wide range of development languages and methodologies. Bright critical thinker with
+                 proven talent for learning quickly in results-oriented environment. Excellent verbal, 
+                 written and interpersonal communication skills. Talented at object-oriented design, 
+                 functional programming paradigms and various development languages. Demonstrated mastery,
+                  and passion for continual learning. Multi-faceted software developer 
+                  knowledgeable in HTML, CSS, JavaScript, C# and .NET Core Frameworks. </p>
             </section>
 
       <!-- ****************************************
@@ -36,12 +85,12 @@
               <article class="tile is-child notification ">
                 <div id="education">
                   <div class="h2_text has-text-centered">
-                    <h2 class="title has-text-weight-bold" style="color:black">
+                    <h2 class="title has-text-weight-bold text-center" style="color:black">
                       Education
                         </h2></br>
                       </div>
-                      <h3 class="subtitle is-medium">Salesians Life Choices</h3>
-                          <p class="ed">
+                      <h3 class="subtitle is-medium text-center">Salesians Life Choices</h3>
+                          <p class="ed text-center w-responsive mx-auto mb-5">
                           The Life Choices Academy is a full-time program which empowers youth from the Cape Flats with life,
                           practical and professional development skills.<br>
                            We did intensive study of the following web development languages:<br>
@@ -51,12 +100,12 @@
                           <br> design thinking
                           Programming languages: HTML and Bootstrap Framework, Bulma Framework, CSS (SASS and SCSS),
                            PHP, Laravel, Javascript, MySQL</p><br>
-                                  <h3 class="subtitle is-medium">University of South Africa</h3>
-                                  <p>Computer Science for a year.</p><br>
+                                  <h3 class="subtitle is-medium text-center">University of South Africa</h3>
+                                  <p class="text-center">Computer Science for a year.</p><br>
                                   <br>
-                          <h2 class="subtitle is-medium">High School:</h2>
-                          <h3 class="subtitle is-medium"> Wellington Secondary School. </h3>
-                      <ul class="subtitle is-medium">
+                          <h2 class="subtitle is-medium text-center">High School:</h2>
+                          <h3 class="subtitle is-medium text-center"> Wellington Secondary School. </h3>
+                      <ul class="subtitle is-medium text-center w-responsive mx-auto mb-5"">
                   <li>English</li>
                   <li>Afrikaans</li>
                   <li>Mathematics</li>
@@ -70,56 +119,55 @@
               </div>
           </div>
       </div>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-     Quae iure nemo neque repellendus assumenda. Tenetur iste aperiam eius. 
-     Est quis eligendi modi,
-     voluptatibus maiores aut nobis quam assumenda vitae vel!</p>   
-
 <section>
+
   <h2 class="h1-responsive font-weight-bold text-center my-5">My projects</h2>
   <p class="grey-text text-center w-responsive mx-auto mb-5">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit est laborum.</p>
 
   <div class="row mx-1">
       <div class="col-md-12 mb-4">
-          <div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Others/img%20%2832%29.jpg);">
+          <div class="card card-image1">
               <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-                  <div>
-                      <h6 class="purple-text"><i class="fas fa-plane"></i><strong> Travel</strong></h6>
-                      <h3 class="card-title py-3 font-weight-bold"><strong>This is the card title</strong></h3>
-                      <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
-                          optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
-                          Odit sed qui, dolorum!</p>
-                      <a class="btn btn-secondary btn-rounded"><i class="far fa-clone left"></i> View project</a>
+                  <div class="text-center">
+                      <h6 class="purple-text"><strong></strong>CV Project</h6>
+                      <h3 class="card-title py-3 font-weight-bold"><strong>Early CV Project</strong></h3>
+                      <p class="pb-3">This is one of my earliest CV projects to showcase 
+                        the growth, production and journey I have gone through as a developer. 
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
+              optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
+              Odit sed qui, dolorum!
+                      </p>
+                      <a class="btn btn-secondary btn-rounded" href="https://xhantighost.github.io/myCV/index.html"><i class="far fa-clone left"></i> View project</a>
                   </div>
               </div>
           </div>
       </div>
 
       <div class="col-md-6 mb-4">
-          <div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20%2873%29.jpg);">
+          <div class="card card-image2">
               <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                   <div>
-                      <h6 class="pink-text"><i class="fas fa-chart-pie"></i><strong> Marketing</strong></h6>
-                      <h3 class="card-title py-3 font-weight-bold"><strong>This is the card title</strong></h3>
-                      <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
-                          optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
-                          Odit sed qui, dolorum!</p>
-                      <a class="btn btn-pink btn-rounded"><i class="far fa-clone left"></i> View project</a>
+                      <h6 class="pink-text"><strong>Jon-Chretien Project</strong></h6>
+                      <h3 class="card-title py-3 font-weight-bold"><strong>Jon-Chretien Project</strong></h3>
+                      <p class="pb-3">This was project was to re-create a website to look like the already 
+                        existing project. This was my attempt.
+                      </p>
+                      <a class="btn btn-pink btn-rounded" href="https://xhantighost.github.io/Jon-Chretien_project/index.html"><i class="far fa-clone left"></i> View project</a>
                   </div>
               </div>
           </div>
       </div>
 
       <div class="col-md-6 mb-4">
-          <div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/City/6-col/img%20%2847%29.jpg);">
+          <div class="card card-image3">
               <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                   <div>
-                      <h6 class="green-text"><i class="far fa-eye"></i><strong> Entertainment</strong></h6>
-                      <h3 class="card-title py-3 font-weight-bold"><strong>This is the card title</strong></h3>
-                      <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
-                          optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
-                          Odit sed qui, dolorum!</p>
-                      <a class="btn btn-success btn-rounded"><i class="far fa-clone left"></i> View project</a>
+                      <h6 class="green-text"><strong>My Wordpress Side-Project</strong></h6>
+                      <h3 class="card-title py-3 font-weight-bold"><strong>My Wordpress Side-Project</strong></h3>
+                      <p class="pb-3">This project was from awhile ago where i attempted to create 
+                        a simple blog using Wordpress plateform.
+                      </p>
+                      <a class="btn btn-success btn-rounded" href="https://baka.art.blog/"><i class="far fa-clone left"></i> View project</a>
                   </div>
               </div>
           </div>
@@ -128,11 +176,12 @@
 </section>
  
 <section>
-<div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);">
+  <h2 class="text-center">Up and Coming Projects</h2>
+<div class="card card-image4">
   <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
       <div>
-          <h5 class="pink-text"><i class="fas fa-chart-pie"></i> Marketing</h5>
-          <h3 class="card-title pt-2"><strong>This is the card title</strong></h3>
+          <h5 class="pink-text">Fully Functional Wordpress Project</h5>
+          <h3 class="card-title pt-2"><strong>Fully Functional Wordpress Project</strong></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
               optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
               Odit sed qui, dolorum!.</p>
@@ -140,10 +189,10 @@
       </div>
   </div>
 </div>
-<div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);">
+<div class="card card-image5">
   <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
       <div>
-          <h5 class="pink-text"><i class="fas fa-chart-pie"></i> Marketing</h5>
+          <h5 class="pink-text"> Marketing</h5>
           <h3 class="card-title pt-2"><strong>This is the card title</strong></h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
               optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos.
@@ -159,13 +208,10 @@
     <div class="row">
       <div class="col-md-12 py-5">
         <div class="mb-5 flex-center">
-          <a class="fb-ic">
-            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <a class="gplus-ic">
+          <a class="gplus-ic" href="xhantijacob@gmail.com">
             <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
           </a>
-          <a class="li-ic">
+          <a class="li-ic" href="https://www.linkedin.com/in/xhantilomzi-jacob-09a8b0171/">
             <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
           </a>
         </div>
