--- a/Index.html
+++ b/Index.html
@@ -10,50 +10,55 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/css/mdb.min.css" rel="stylesheet">
     <title>Xhantilomzi CV</title>
+
+    <script>
+      new WOW().init();
+      </script>
 </head>
 <body>
-<header>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar bg-primary">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">Dropdown
-          </a>
-          <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-      </ul>
-      <form class="form-inline">
-        <div class="md-form my-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+
+  
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="#"><strong>XPJ</strong></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent-7">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Profile</a>
+            </li>
+          </ul>
+          </form>
         </div>
-      </form>
+      </div>
+    </nav> -->
+    <div class="bg">
+      <div class="mask rgba-white-light align-items-center">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 mb-4 white-text text-center">
+              <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>Portfolio of Xhantilomzi Jacob</strong></h1>
+              <hr class="hr-dark my-4 wow fadeInDown" data-wow-delay="0.4s">
+              <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>developer & design</strong></h5>
+              <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">portfolio</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </nav>
-</header>
 
 
-<div class="bg"></div>
-  <section>
-    <h2 class="text-center">About</h2>
+
+   <section>
+    <h2 class="h1-responsive font-weight-bold text-center my-5">About</h2>
       <p class="py-5 text-center">I am an enthusiastic and progressive person.
          I am dedicated to keep growing as a person. Have a love and passion for education
           and technology and people. I am an individual that strives for excellence through my
@@ -71,9 +76,7 @@
                   knowledgeable in HTML, CSS, JavaScript, C# and .NET Core Frameworks. </p>
             </section>
 
-      <!-- ****************************************
-           Education & Skills tag
-        *******************************************-->
+     
                                                                 
 <section class="section">                        
   <div class="tile is-parent">
@@ -85,7 +88,7 @@
               <article class="tile is-child notification ">
                 <div id="education">
                   <div class="h2_text has-text-centered">
-                    <h2 class="title has-text-weight-bold text-center" style="color:black">
+                    <h2 class="h1-responsive font-weight-bold text-center my-5">
                       Education
                         </h2></br>
                       </div>
@@ -122,7 +125,6 @@
 <section>
 
   <h2 class="h1-responsive font-weight-bold text-center my-5">My projects</h2>
-  <p class="grey-text text-center w-responsive mx-auto mb-5">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit est laborum.</p>
 
   <div class="row mx-1">
       <div class="col-md-12 mb-4">
@@ -174,7 +176,9 @@
       </div>
   </div>
 </section>
- 
+ <br>
+ <br>
+
 <section>
   <h2 class="text-center">Up and Coming Projects</h2>
 <div class="card card-image4">
@@ -220,7 +224,7 @@
   </div>
   <div class="footer-copyright text-center py-3">© 2020 Copyright by X
   </div>
-</footer>
+</footer> 
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
